# DarkTableNext

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  DefineOptions.cmake  GEOCONTROLS_INTEGRATION.md  README.md  RELEASE_NOTES.md  TODO.md  TODO_C11_CONSOLIDATION.md  TODO_CONTEXT_MENUS.md  TODO_CORE_REDUCTION.md  TODO_GTK4_MIGRATION.md  TODO_MACOS_COMMANDS.md  TODO_QML_IMPORT.md  TODO_REWRITE.md  source_roots.lock.jsonc.in
DarkTableNext/: CMakeLists.txt  main.cpp
DarkTableNext/qml/: Main.qml  MainShell.qml  WelcomeScreen.qml
DevDocs/: AI.md  AI_Tasks.md  Dependency_Workflow.md  GPU_Baseline.md  GTK4_Migration_Scope.md  GUI.md  IOP_Module_API.md  Linux_Packaging.md  Module_Groups.md  New_Module_Guide.md  README.md  Runtime_Persistence.md  Shortcuts.md  Windows_Packaging.md  introspection.md
Ravo/: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  MIGRATION.md  README.md  TESTING.md
Ravo/adapters/: CMakeLists.txt
Ravo/adapters/include/ravo/adapters/: legacy_xmp.h  text_file.h
Ravo/adapters/src/: legacy_xmp.cpp  text_file.cpp
Ravo/cli/: CMakeLists.txt
Ravo/cli/include/ravo/cli/: application.h
Ravo/cli/src/: application.cpp  main.cpp
Ravo/docs/adr/: 0001-cpp20-headless-first.md  0002-ravo-consumes-src.md  0003-versioned-machine-contract.md  0004-freeze-09-ravo-only-growth.md  0005-qtcore-filesystem-adapter.md  0006-explicit-colour-contract.md  README.md
Ravo/docs/phase0/: README.md  capability-inventory.md  legacy-baseline-2026-07-21.md  product-decision-register.md  use-case-contract.md
Ravo/engine/: CMakeLists.txt
Ravo/engine/include/ravo/engine/: engine.h
Ravo/engine/src/: engine.cpp  raw_pipeline.cpp  raw_pipeline.h
Ravo/foundation/: CMakeLists.txt
Ravo/foundation/include/ravo/foundation/: cancellation.h  error.h  json.h
Ravo/foundation/src/: cancellation.cpp  error.cpp  json.cpp
Ravo/recipe/: CMakeLists.txt
Ravo/recipe/include/ravo/recipe/: operation.h  recipe.h
Ravo/recipe/src/: operation.cpp  recipe.cpp
Ravo/tests/: CMakeLists.txt  cli_test.cpp  engine_test.cpp  foundation_test.cpp  recipe_test.cpp  test_support.h
Ravo/tests/fixtures/: fixture_classification_ledger.json  legacy_manifest.json  vertical_slice_plan.json
Ravo/tools/: check_capability_inventory.py  check_fixture_classification_ledger.py  check_freeze_reference.py  check_ravo_dependency_boundary.py  check_vertical_slice_plan.py  freecm_project.ps1  freecm_project.py  freeze_legacy_manifest.py
benchmarks/: README.md  gpu_baseline.py
data/: CMakeLists.txt  darktableconfig.dtd  darktableconfig.xml.in  luarc  supported_extensions.cmake
data/kernels/: basecurve.cl  basic.cl  blendop.cl  denoiseprofile.cl  extended.cl  filmic.cl  programs.conf  rgb_norms.h
data/lua/darktable/: debug.lua
data/pixmaps/: CMakeLists.txt  hicolor.index.theme
data/pixmaps/macos/: darktable.icns
data/styles/: CMakeLists.txt
data/themes/: chunk-base.css  darktable-elegant-dark.css  darktable-elegant-darker.css  darktable-elegant-grey.css  darktable-elegant-highcontrast.css  darktable-icons.css  darktable.css
src/ai/: CMakeLists.txt  backend.h  backend_common.c  backend_onnx.c
src/chart/: CMakeLists.txt  colorchart.c  colorchart.h  common.c  common.h  deltaE.c  deltaE.h  dtcairo.c  dtcairo.h  main.c  thinplate.c  thinplate.h  tonecurve.c  tonecurve.h
src/cli/: CMakeLists.txt  main.c
src/cltest/: CMakeLists.txt  main.c
src/generate-cache/: CMakeLists.txt  main.c
src/imageio/format/: CMakeLists.txt  avif.c  copy.c  exr.cc  heif.c  imageio_format_api.h  j2k.c  jpeg.c  jxl.c  pdf.c  pfm.c  png.c  ppm.c  tiff.c  webp.c  xcf.c
src/imageio/storage/: CMakeLists.txt  disk.c  email.c  gallery.c  imageio_storage_api.h  latex.c  piwigo.c
src/libs/: CMakeLists.txt  backgroundjobs.c  camera.c  collect.c  collect.h  colorpicker.c  colorpicker.h  copy_history.c  duplicate.c  export.c  export_metadata.c  filtering.c  geotagging.c  histogram.c  history.c  image.c  import.c  ioporder.c  lib.c  lib.h  lib_api.h  live_view.c  location.c  map_locations.c  map_settings.c  masks.c  metadata.c  metadata_view.c  modulegroups.c  modulegroups.h  navigation.c  neural_restore.c  print_settings.c  recentcollect.c  scopes.h  select.c  session.c  snapshots.c  styles.c  tagging.c
src/libs/filters/: aperture.c  colors.c  date.c  duplicates.c  exposure.c  exposure_bias.c  filename.c  focal.c  history.c  iso.c  local_copy.c  misc.c  module_order.c  rating.c  rating_range.c  ratio.c  search.c
src/libs/scopes/: histogram.c  split.c  vectorscope.c  vectorscope.h  waveform.c
src/libs/tools/: colorlabels.c  darktable.c  filmstrip.c  filter.c  flags.c  gamepad.c  global_toolbox.c  hinter.c  image_infos.c  lighttable.c  log_history.c  midi.c  module_toolbox.c  ratings.c  timeline.c  view_toolbox.c  viewswitcher.c
src/tests/: CMakeLists.txt  cache.c  variables.c
src/tests/benchmark/: README.txt  darktable-bench  source_roots.lock.jsonc.in
src/tests/unittests/: CMakeLists.txt  test_database_schema.c  test_sample.c
src/tests/unittests/ai/: CMakeLists.txt  dt_stubs.c  test_ai_backend.c
src/tests/unittests/iop/: test_filmicrgb.c
src/tests/unittests/util/: assert.h  testimg.c  testimg.h  tracing.h
src/views/: CMakeLists.txt  darkroom.c  lighttable.c  map.c  print.c  slideshow.c  tethering.c  view.c  view.h  view_api.h
tools/: CMakeLists.txt  README.md  check_camera_support  create_version_c.sh  diff_lua_api.lua  dngmeta.rb  dngmeta.sh  extract_wb.py  generate_darktablerc_conf.xsl  generate_prefs.xsl  makeman.sh  rawspeed-check-canon.rb  rawspeed-check-nikon-modes.rb  rawspeed-diff-cameras-xml.rb  rawspeed_common.rb  sync_wb_presets_with_ufraw-deepdiff  wb_presets_common.rb
tools/basecurve/: CMakeLists.txt  darktable-curve-tool.c  exif-wrapper.cpp
tools/introspection/: ast.pm  code_gen.pm  parser.pl  parser.pm  scanner.pm
tools/lua_doc/: content.lua  core.lua  dumper.lua  usermanual.lua  wiki.lua
tools/lua_doc/old_api/: dt_api202.lua  dt_api210dev.lua  dt_api300.lua  dt_api400.lua  dt_api500.lua
tools/noise/: CMakeLists.txt
tools/release/: create_release.sh
(+819 files in other folders)
